arc/parser/slate_parser.go
// Code generated from SlateParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // SlateParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SlateParser struct {
	*antlr.BaseParser
}

var SlateParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func slateparserParserInit() {
	staticData := &SlateParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'func'", "'task'", "'if'", "'else'", "'return'", "'now'", "'len'",
		"'chan'", "'<-chan'", "'->chan'", "'i8'", "'i16'", "'i32'", "'i64'",
		"'u8'", "'u16'", "'u32'", "'u64'", "'f32'", "'f64'", "'string'", "'timestamp'",
		"'timespan'", "'series'", "'->'", "'<-'", "':='", "'$='", "'='", "'+'",
		"'-'", "'*'", "'/'", "'%'", "'^'", "'=='", "'!='", "'<'", "'>'", "'<='",
		"'>='", "'&&'", "'||'", "'!'", "'('", "')'", "'{'", "'}'", "'['", "']'",
		"','", "':'", "';'",
	}
	staticData.SymbolicNames = []string{
		"", "FUNC", "TASK", "IF", "ELSE", "RETURN", "NOW", "LEN", "CHAN", "RECV_CHAN",
		"SEND_CHAN", "I8", "I16", "I32", "I64", "U8", "U16", "U32", "U64", "F32",
		"F64", "STRING", "TIMESTAMP", "TIMESPAN", "SERIES", "ARROW", "RECV",
		"DECLARE", "STATE_DECLARE", "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH",
		"PERCENT", "CARET", "EQ", "NEQ", "LT", "GT", "LEQ", "GEQ", "AND", "OR",
		"NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET",
		"COMMA", "COLON", "SEMICOLON", "TEMPORAL_LITERAL", "FREQUENCY_LITERAL",
		"INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", "IDENTIFIER",
		"SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"program", "topLevelItem", "functionDeclaration", "parameterList", "parameter",
		"returnType", "taskDeclaration", "configBlock", "configParameter", "flowStatement",
		"flowNode", "channelIdentifier", "taskInvocation", "configValues", "namedConfigValues",
		"namedConfigValue", "anonymousConfigValues", "arguments", "argumentList",
		"block", "statement", "variableDeclaration", "localVariable", "statefulVariable",
		"assignment", "channelOperation", "channelWrite", "channelRead", "blockingRead",
		"nonBlockingRead", "ifStatement", "elseIfClause", "elseClause", "returnStatement",
		"functionCall", "type", "primitiveType", "numericType", "integerType",
		"floatType", "temporalType", "channelType", "seriesType", "expression",
		"logicalOrExpression", "logicalAndExpression", "equalityExpression",
		"relationalExpression", "additiveExpression", "multiplicativeExpression",
		"powerExpression", "unaryExpression", "blockingReadExpr", "postfixExpression",
		"indexOrSlice", "functionCallSuffix", "primaryExpression", "typeCast",
		"builtinFunction", "literal", "numericLiteral", "temporalLiteral", "seriesLiteral",
		"expressionList",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SlateParserInit initializes any static state used to implement SlateParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSlateParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SlateParserInit() {
	staticData := &SlateParserParserStaticData
	staticData.once.Do(slateparserParserInit)
}

// NewSlateParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSlateParser(input antlr.TokenStream) *SlateParser {
	SlateParserInit()
	this := new(SlateParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SlateParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "SlateParser.g4"

	return this
}

// SlateParser tokens.
const (
	SlateParserEOF                 = antlr.TokenEOF
	SlateParserFUNC                = 1
	SlateParserTASK                = 2
	SlateParserIF                  = 3
	SlateParserELSE                = 4
	SlateParserRETURN              = 5
	SlateParserNOW                 = 6
	SlateParserLEN                 = 7
	SlateParserCHAN                = 8
	SlateParserRECV_CHAN           = 9
	SlateParserSEND_CHAN           = 10
	SlateParserI8                  = 11
	SlateParserI16                 = 12
	SlateParserI32                 = 13
	SlateParserI64                 = 14
	SlateParserU8                  = 15
	SlateParserU16                 = 16
	SlateParserU32                 = 17
	SlateParserU64                 = 18
	SlateParserF32                 = 19
	SlateParserF64                 = 20
	SlateParserSTRING              = 21
	SlateParserTIMESTAMP           = 22
	SlateParserTIMESPAN            = 23
	SlateParserSERIES              = 24
	SlateParserARROW               = 25
	SlateParserRECV                = 26
	SlateParserDECLARE             = 27
	SlateParserSTATE_DECLARE       = 28
	SlateParserASSIGN              = 29
	SlateParserPLUS                = 30
	SlateParserMINUS               = 31
	SlateParserSTAR                = 32
	SlateParserSLASH               = 33
	SlateParserPERCENT             = 34
	SlateParserCARET               = 35
	SlateParserEQ                  = 36
	SlateParserNEQ                 = 37
	SlateParserLT                  = 38
	SlateParserGT                  = 39
	SlateParserLEQ                 = 40
	SlateParserGEQ                 = 41
	SlateParserAND                 = 42
	SlateParserOR                  = 43
	SlateParserNOT                 = 44
	SlateParserLPAREN              = 45
	SlateParserRPAREN              = 46
	SlateParserLBRACE              = 47
	SlateParserRBRACE              = 48
	SlateParserLBRACKET            = 49
	SlateParserRBRACKET            = 50
	SlateParserCOMMA               = 51
	SlateParserCOLON               = 52
	SlateParserSEMICOLON           = 53
	SlateParserTEMPORAL_LITERAL    = 54
	SlateParserFREQUENCY_LITERAL   = 55
	SlateParserINTEGER_LITERAL     = 56
	SlateParserFLOAT_LITERAL       = 57
	SlateParserSTRING_LITERAL      = 58
	SlateParserIDENTIFIER          = 59
	SlateParserSINGLE_LINE_COMMENT = 60
	SlateParserMULTI_LINE_COMMENT  = 61
	SlateParserWS                  = 62
)

// SlateParser rules.
const (
	SlateParserRULE_program                  = 0
	SlateParserRULE_topLevelItem             = 1
	SlateParserRULE_functionDeclaration      = 2
	SlateParserRULE_parameterList            = 3
	SlateParserRULE_parameter                = 4
	SlateParserRULE_returnType               = 5
	SlateParserRULE_taskDeclaration          = 6
	SlateParserRULE_configBlock              = 7
	SlateParserRULE_configParameter          = 8
	SlateParserRULE_flowStatement            = 9
	SlateParserRULE_flowNode                 = 10
	SlateParserRULE_channelIdentifier        = 11
	SlateParserRULE_taskInvocation           = 12
	SlateParserRULE_configValues             = 13
	SlateParserRULE_namedConfigValues        = 14
	SlateParserRULE_namedConfigValue         = 15
	SlateParserRULE_anonymousConfigValues    = 16
	SlateParserRULE_arguments                = 17
	SlateParserRULE_argumentList             = 18
	SlateParserRULE_block                    = 19
	SlateParserRULE_statement                = 20
	SlateParserRULE_variableDeclaration      = 21
	SlateParserRULE_localVariable            = 22
	SlateParserRULE_statefulVariable         = 23
	SlateParserRULE_assignment               = 24
	SlateParserRULE_channelOperation         = 25
	SlateParserRULE_channelWrite             = 26
	SlateParserRULE_channelRead              = 27
	SlateParserRULE_blockingRead             = 28
	SlateParserRULE_nonBlockingRead          = 29
	SlateParserRULE_ifStatement              = 30
	SlateParserRULE_elseIfClause             = 31
	SlateParserRULE_elseClause               = 32
	SlateParserRULE_returnStatement          = 33
	SlateParserRULE_functionCall             = 34
	SlateParserRULE_type                     = 35
	SlateParserRULE_primitiveType            = 36
	SlateParserRULE_numericType              = 37
	SlateParserRULE_integerType              = 38
	SlateParserRULE_floatType                = 39
	SlateParserRULE_temporalType             = 40
	SlateParserRULE_channelType              = 41
	SlateParserRULE_seriesType               = 42
	SlateParserRULE_expression               = 43
	SlateParserRULE_logicalOrExpression      = 44
	SlateParserRULE_logicalAndExpression     = 45
	SlateParserRULE_equalityExpression       = 46
	SlateParserRULE_relationalExpression     = 47
	SlateParserRULE_additiveExpression       = 48
	SlateParserRULE_multiplicativeExpression = 49
	SlateParserRULE_powerExpression          = 50
	SlateParserRULE_unaryExpression          = 51
	SlateParserRULE_blockingReadExpr         = 52
	SlateParserRULE_postfixExpression        = 53
	SlateParserRULE_indexOrSlice             = 54
	SlateParserRULE_functionCallSuffix       = 55
	SlateParserRULE_primaryExpression        = 56
	SlateParserRULE_typeCast                 = 57
	SlateParserRULE_builtinFunction          = 58
	SlateParserRULE_literal                  = 59
	SlateParserRULE_numericLiteral           = 60
	SlateParserRULE_temporalLiteral          = 61
	SlateParserRULE_seriesLiteral            = 62
	SlateParserRULE_expressionList           = 63
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllTopLevelItem() []ITopLevelItemContext
	TopLevelItem(i int) ITopLevelItemContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SlateParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SlateParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SlateParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(SlateParserEOF, 0)
}

func (s *ProgramContext) AllTopLevelItem() []ITopLevelItemContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITopLevelItemContext); ok {
			len++
		}
	}

	tst := make([]ITopLevelItemContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITopLevelItemContext); ok {
			tst[i] = t.(ITopLevelItemContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) TopLevelItem(i int) ITopLevelItemContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopLevelItemContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopLevelItemContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SlateParserListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SlateParserListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *SlateParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SlateParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(131)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&1135522834857066438) != 0 {
		{
			p.SetState(128)
			p.TopLevelItem()
		}

		p.SetState(133)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(134)
		p.Match(SlateParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITopLevelItemContext is an interface to support dynamic dispatch.
type ITopLevelItemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FunctionDeclaration() IFunctionDeclarationContext
	TaskDeclaration() ITaskDeclarationContext
	FlowStatement() IFlowStatementContext

	// IsTopLevelItemContext differentiates from other interfaces.
	IsTopLevelItemContext()
}

type TopLevelItemContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopLevelItemContext() *TopLevelItemContext {
	var p = new(TopLevelItemContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SlateParserRULE_topLevelItem
	return p
}

func InitEmptyTopLevelItemContext(p *TopLevelItemContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SlateParserRULE_topLevelItem
}

func (*TopLevelItemContext) IsTopLevelItemContext() {}

func NewTopLevelItemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TopLevelItemContext {
	var p = new(TopLevelItemContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SlateParserRULE_topLevelItem

	return p
}

func (s *TopLevelItemContext) GetParser() antlr.Parser { return s.parser }

func (s *TopLevelItemContext) FunctionDeclaration() IFunctionDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationContext)
}

func (s *TopLevelItemContext) TaskDeclaration() ITaskDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITaskDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITaskDeclarationContext)
}

func (s *TopLevelItemContext) FlowStatement() IFlowStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFlowStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFlowStatementContext)
}

func (s *TopLevelItemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopLevelItemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TopLevelItemContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SlateParserListener); ok {
		listenerT.EnterTopLevelItem(s)
	}
}

func (s *TopLevelItemContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SlateParserListener); ok {
		listenerT.ExitTopLevelItem(s)
	}
}

func (p *SlateParser) TopLevelItem() (localctx ITopLevelItemContext) {
	localctx = NewTopLevelItemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SlateParserRULE_topLevelItem)
	p.SetState(139)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case SlateParserFUNC:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(136)
			p.FunctionDeclaration()
		}

	case SlateParserTASK:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(137)
			p.TaskDeclaration()
		}

	case SlateParserNOW, SlateParserLEN, SlateParserCHAN, SlateParserRECV_CHAN, SlateParserSEND_CHAN, SlateParserI8, SlateParserI16, SlateParserI32, SlateParserI64, SlateParserU8, SlateParserU16, SlateParserU32, SlateParserU64, SlateParserF32, SlateParserF64, SlateParserSTRING, SlateParserTIMESTAMP, SlateParserTIMESPAN, SlateParserSERIES, SlateParserRECV, SlateParserMINUS, SlateParserNOT, SlateParserLPAREN, SlateParserLBRACKET, SlateParserTEMPORAL_LITERAL, SlateParserFREQUENCY_LITERAL, SlateParserINTEGER_LITERAL, SlateParserFLOAT_LITERAL, SlateParserSTRING_LITERAL, SlateParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(138)
			p.FlowStatement()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFunctionDeclarationContext is an interface to support dynamic dispatch.
type IFunctionDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FUNC() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	RPAREN() antlr.TerminalNode
	Block() IBlockContext
	ParameterList() IParameterListContext
	ReturnType() IReturnTypeContext

	// IsFunctionDeclarationContext differentiates from other interfaces.
	IsFunctionDeclarationContext()
}

type FunctionDeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunctionDeclarationContext() *FunctionDeclarationContext {
	var p = new(FunctionDeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SlateParserRULE_functionDeclaration
	return p
}

func InitEmptyFunctionDeclarationContext(p *FunctionDeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SlateParserRULE_functionDeclaration
}

func (*FunctionDeclarationContext) IsFunctionDeclarationContext() {}

func NewFunctionDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunctionDeclarationContext {
	var p = new(FunctionDeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SlateParserRULE_functionDeclaration

	return p
}

func (s *FunctionDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *FunctionDeclarationContext) FUNC() antlr.TerminalNode {
	return s.GetToken(SlateParserFUNC, 0)
}

func (s *FunctionDeclarationContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SlateParserIDENTIFIER, 0)
}

func (s *FunctionDeclarationContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(SlateParserLPAREN, 0)
}

func (s *FunctionDeclarationContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(SlateParserRPAREN, 0)
}

func (s *FunctionDeclarationContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *FunctionDeclarationContext) ParameterList() IParameterListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParameterListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParameterListContext)
}

func (s *FunctionDeclarationContext) ReturnType() IReturnTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IReturnTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IReturnTypeContext)
}

func (s *FunctionDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunctionDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunctionDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SlateParserListener); ok {
		listenerT.EnterFunctionDeclaration(s)
	}
}

func (s *FunctionDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SlateParserListener); ok {
		listenerT.ExitFunctionDeclaration(s)
	}
}

func (p *SlateParser) FunctionDeclaration() (localctx IFunctionDeclarationContext) {
	localctx = NewFunctionDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SlateParserRULE_functionDeclaration)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(141)
		p.Match(SlateParserFUNC)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(142)
		p.Match(SlateParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(143)
		p.Match(SlateParserLPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(145)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == SlateParserIDENTIFIER {
		{
			p.SetState(144)
			p.ParameterList()
		}

	}
	{
		p.SetState(147)
		p.Match(SlateParserRPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(149)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&33554176) != 0 {
		{
			p.SetState(148)
			p.ReturnType()
		}

	}
	{
		p.SetState(151)
		p.Block()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IParameterListContext is an interface to support dynamic dispatch.
type IParameterListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllParameter() []IParameterContext
	Parameter(i int) IParameterContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsParameterListContext differentiates from other interfaces.
	IsParameterListContext()
}

type ParameterListContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParameterListContext() *ParameterListContext {
	var p = new(ParameterListContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SlateParserRULE_parameterList
	return p
}

func InitEmptyParameterListContext(p *ParameterListContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SlateParserRULE_parameterList
}

func (*ParameterListContext) IsParameterListContext() {}

func NewParameterListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParameterListContext {
	var p = new(ParameterListContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SlateParserRULE_parameterList

	return p
}

func (s *ParameterListContext) GetParser() antlr.Parser { return s.parser }

func (s *ParameterListContext) AllParameter() []IParameterContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IParameterContext); ok {
			len++
		}
	}
